--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <title>Document</title>
 </head>
 <body>
+  <div class="d-flex bg-warning">
     <h1>
         Hello world
     </h1>
+    <p>Hi there</p></div>
 </body>
 </html>
