Added Font Awesome

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
-    <title>Document</title>
+<script src="https://kit.fontawesome.com/03b4461250.js" crossorigin="anonymous"></script>
+    <title>Katarzyna Hassan</title>
 </head>
 <body>
   <div class="d-flex bg-warning">
     <h1>
         Hello world
     </h1>
-    <p>Hi there</p></div>
+    <p>Hi there</p><i class="fa-brands fa-instagram"></i></div>
 </body>
 </html>
