--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <h1>
         Hello world
     </h1>
-    <p>Hi there</p><i class="fa-brands fa-instagram"></i></div>
+    <p>Hi there</p></div><i class="fa-brands fa-instagram"></i>
 </body>
 </html>
