--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1>
         Hello world
     </h1>
-    <p>Hi there</p></div>
-    <i class="fa-brands fa-instagram"></i>
+    <p>Hi there</p> <i class="fa fa-brands fa-instagram"></i></div>
+   
 </body>
 </html>
