--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 <title>Katarzyna Hassan</title>
 </head>
 <body>
-  <div class="d-flex bg-warning">
-    <h1>
-        Hello world
-    </h1>
-    <p>Hi there</p> <i class="fa fa-brands fa-instagram"></i></div>
-   
+  <div class="hero">
+ <p>👋🏻 Hi I am</p>
+ <h1>Katarzyna Hassan</h1>
+ <h2 class="mb-5"> Front-end developer based in Poland</h2>
+ <div>
+ <a href="#" class="btn btn-branding">Contact me</a></div>
+</div>
 </body>
 </html>
