--- a/index.html
+++ b/index.html
@@ -37,10 +37,13 @@
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
     </div>
-    <p class="text-center m-5">My Best Projects</p>
+
+    <p class="text-center m-5">
+      Featured Project which my best projects be choice to show
+    </p>
     <div class="container">
-      <div class="row">
-        <div class="col-6">
+      <div class="row mb-5">
+        <div class="col-6 d-none d-lg-block">
           <img src="images/joghurt.png" class="img-fluid" alt="" />
         </div>
         <div class="col-6">
@@ -55,15 +58,23 @@
             <a href="" class="btn btn-branding-outline"> Launch project </a>
           </div>
         </div>
-
-        <h2 class="mb-5">Yogurt Project</h2>
-        <p class="mb-4">
-          Far far away, behind the word mountains, far from the countries
-          Vokalia and Consonantia, there live the blind texts. Separated they
-          live in Bookmarksgrove right at the coast of the Semantics, a large
-          language ocean. A small river named Duden flows by
-        </p>
-        <a href="" class="btn btn-branding-outline"> Launch project </a>
+      </div>
+      <div class="row mb-5">
+        <div class="col-6">
+          <div class="project-description">
+            <h2 class="mb-5">Weather App</h2>
+            <p class="mb-5 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="" class="btn btn-branding-outline"> Launch project </a>
+          </div>
+        </div>
+        <div class="col-6 d-none d-lg-block">
+          <img src="images/weather-app.png" class="img-fluid" alt="" />
+        </div>
       </div>
     </div>
   </body>
