--- a/index.html
+++ b/index.html
@@ -38,42 +38,43 @@
       </div>
     </div>
 
-    <p class="text-center m-5">
-      Featured Project which my best projects be choice to show
-    </p>
+    <p class="text-center m-5">My projects featuring SheCodes</p>
     <div class="container">
       <div class="row mb-5">
-        <div class="col-6 d-none d-lg-block">
-          <img src="images/joghurt.png" class="img-fluid" alt="" />
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/sheera-page.png"
+            class="img-fluid img-thumbnail"
+            alt=""
+          />
         </div>
-        <div class="col-6">
+        <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Yogurt Project</h2>
+            <h2 class="mb-5">Simple Page Design</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              MY first landing page built with HTML/CSS and JS.
             </p>
             <a href="" class="btn btn-branding-outline"> Launch project </a>
           </div>
         </div>
       </div>
       <div class="row mb-5">
-        <div class="col-6">
+        <div class="col">
           <div class="project-description">
             <h2 class="mb-5">Weather App</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              Weather project with Vanilla JS. Built with HTML, CSS, JS. API and
+              real life forecast data implemented. Hosted on Netlify.</p>
+              <a href="" class="btn btn-branding-outline"> Launch project </a>
             </p>
-            <a href="" class="btn btn-branding-outline"> Launch project </a>
           </div>
         </div>
-        <div class="col-6 d-none d-lg-block">
-          <img src="images/weather-app.png" class="img-fluid" alt="" />
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/optymisticweather-app.png"
+            class="img-fluid img-thumbnail"
+            alt=""
+          />
         </div>
       </div>
     </div>
