--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="project-description">
             <h2 class="mb-5">Simple Page Design</h2>
             <p class="mb-5 text-muted">
-              MY first landing page built with HTML/CSS and JS.
+              My first landing page built with HTML/CSS and JS.
             </p>
             <a href="" class="btn btn-branding-outline"> Launch project </a>
           </div>
