--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
     <title>Katarzyna Hassan</title>
   </head>
   <body>
+<div class="container"> 
+    <nav class="d-flex justify-content-between">
+      <img src="images/logo.png" class="logo" alt="">
+      <ul>
+        <li><a href=""> Home</a></li>
+        <li><a href="/about.html"> About</a></li>
+        <li><a href="/work.html"> Work</a></li>
+        <li><a href="/contact.html"> Contact</a></li>
+      </ul>
+    </nav></div>
     <div class="hero">
       <p>👋🏻 Hi I am</p>
       <h1>Katarzyna Hassan</h1>
