--- a/work.html
+++ b/work.html
@@ -31,15 +31,14 @@
   <body>
     <div class="content-container container">
       <div class="content">
-        <h1 class="mt-5 text-left">
-          Take a look at what I've been working on!
-        </h1>
+        <h1 class="mt-5">Take a look at what I've been working on!</h1>
         <div class="row mt-5">
           <div class="col-md-6">
             <img
               src="images/sheera-page.png"
               class="img-fluid mb-3 rounded"
               alt=""
+              id="sheera-img"
             />
             <h3 class="text-center m-0">Simple Page Design</h3>
             <p class="text-center m-0 text-muted">Built with HTML and CSS</p>
