--- a/about.html
+++ b/about.html
@@ -33,8 +33,8 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="content">
-            <h1 class="mb-4">Hi I am Patricia Pereira</h1>
-            <h2 class="mb-4">Frontend Developer, based in Portugal.</h2>
+            <h1 class="mb-4">Hi, I am Katarzyna Hassan</h1>
+            <h2 class="mb-4">Frontend Developer, based in Poland.</h2>
             <p class="mb-5">
               For anyone who wants to start learning code, this workshop is very
               interesting. You will be challenged with different exercises, and
@@ -45,7 +45,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/myself.png" alt="" class="img-fluid" />
+          <img src="images/me.jpg" alt="" class="img-fluid" />
         </div>
       </div>
     </div>
