--- a/work.html
+++ b/work.html
@@ -29,6 +29,17 @@
     <title>Katarzyna Hassan</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <img src="images/logo.png" class="logo" alt="" />
+        <ul>
+          <li><a href=""> Home</a></li>
+          <li><a href="/about.html"> About</a></li>
+          <li><a href="/work.html"> Work</a></li>
+          <li><a href="/contact.html"> Contact</a></li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="content">
         <h1 class="mt-5">Take a look at what I've been working on!</h1>
