--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
       <nav class="d-flex justify-content-between">
         <img src="images/logo.png" class="logo" alt="" />
         <ul>
-          <li><a href=""> Home</a></li>
+          <li><a href="/index.html"> Home</a></li>
           <li><a href="/about.html"> About</a></li>
           <li><a href="/work.html"> Work</a></li>
           <li><a href="/contact.html"> Contact</a></li>
