Whole footer added

--- a/index.html
+++ b/index.html
@@ -29,16 +29,17 @@
     <title>Katarzyna Hassan</title>
   </head>
   <body>
-<div class="container"> 
-    <nav class="d-flex justify-content-between">
-      <img src="images/logo.png" class="logo" alt="">
-      <ul>
-        <li><a href=""> Home</a></li>
-        <li><a href="/about.html"> About</a></li>
-        <li><a href="/work.html"> Work</a></li>
-        <li><a href="/contact.html"> Contact</a></li>
-      </ul>
-    </nav></div>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <img src="images/logo.png" class="logo" alt="" />
+        <ul>
+          <li><a href=""> Home</a></li>
+          <li><a href="/about.html"> About</a></li>
+          <li><a href="/work.html"> Work</a></li>
+          <li><a href="/contact.html"> Contact</a></li>
+        </ul>
+      </nav>
+    </div>
     <div class="hero">
       <p>👋🏻 Hi, I am</p>
       <h1>Katarzyna Hassan</h1>
@@ -74,9 +75,9 @@
             <h2 class="mb-5">Weather App</h2>
             <p class="mb-5 text-muted">
               Weather project with Vanilla JS. Built with HTML, CSS, JS. API and
-              real life forecast data implemented. Hosted on Netlify.</p>
-              <a href="" class="btn btn-branding-outline"> Launch project </a>
+              real life forecast data implemented. Hosted on Netlify.
             </p>
+            <a href="" class="btn btn-branding-outline"> Launch project </a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -86,6 +87,39 @@
             alt=""
           />
         </div>
+      </div>
+      <div
+        class="work-inquiry d-flex justify-content-between mb-5 d-none d-md-flex"
+      >
+        <div>
+          <h3>Work Inquiry</h3>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a href="" class="btn btn-branding mt-2"> Contact me here</a>
+        </div>
+      </div>
+      <div class="d-flex justify-content-center">
+        <footer>
+          <a
+            href="mailto:katarzyna.przybylakk@gmail.com"
+            class="email-link d-flex mb-5"
+            >katarzyna.przybylakk@gmail.com</a
+          >
+          <div class="social-links d-flex justify-content-center">
+            <a href="https://www.instagram.com/kitty.hsn/" target="_blank"
+              ><i class="fab fa-instagram"></i
+            ></a>
+            <a href="https://github.com/kittyhsn" target="_blank"
+              ><i class="fab fa-github"></i
+            ></a>
+            <a
+              href="https://www.linkedin.com/in/katarzyna-hassan-23179b1aa/"
+              target="_blank"
+              ><i class="fab fa-linkedin"></i
+            ></a>
+          </div>
+        </footer>
       </div>
     </div>
   </body>
