Finishing touches part 1

--- a/about.html
+++ b/about.html
@@ -31,12 +31,17 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <img src="images/logo.png" class="logo" alt="" />
+        <img
+          src="images/logo.png"
+          class="logo"
+          alt="SheCodes logo"
+          title="SheCodes logo"
+        />
         <ul>
-          <li><a href="/index.html"> Home</a></li>
-          <li><a href="/about.html"> About</a></li>
-          <li><a href="/work.html"> Work</a></li>
-          <li><a href="/contact.html"> Contact</a></li>
+          <li><a href="/" title="Homepage"> Home</a></li>
+          <li><a href="/about.html" title="About Kasia"> About</a></li>
+          <li><a href="/work.html" title="Kasia's work"> Work</a></li>
+          <li><a href="/contact.html" title="Contact page"> Contact</a></li>
         </ul>
       </nav>
     </div>
