--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Kasia is a front-end engineer based in Poland"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,17 +30,22 @@
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
       crossorigin="anonymous"
     ></script>
-    <title>Katarzyna Hassan</title>
+    <title>Front-end developer - Katarzyna Hassan</title>
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <img src="images/logo.png" class="logo" alt="" />
+        <img
+          src="images/logo.png"
+          class="logo"
+          alt="SheCodes logo"
+          title="SheCodes logo"
+        />
         <ul>
-          <li><a href=""> Home</a></li>
-          <li><a href="/about.html"> About</a></li>
-          <li><a href="/work.html"> Work</a></li>
-          <li><a href="/contact.html"> Contact</a></li>
+          <li><a href="/" title="Homepage"> Home</a></li>
+          <li><a href="/about.html" title="About Kasia"> About</a></li>
+          <li><a href="/work.html" title="Kasia's work"> Work</a></li>
+          <li><a href="/contact.html" title="Contact page"> Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -45,7 +54,7 @@
       <h1>Katarzyna Hassan</h1>
       <h2 class="mb-5">Front-end developer based in Poland</h2>
       <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+        <a href="/contact.html" class="btn btn-branding">Contact me</a>
       </div>
     </div>
 
@@ -56,7 +65,7 @@
           <img
             src="images/sheera-page.png"
             class="img-fluid img-thumbnail"
-            alt=""
+            alt="Simple HTML based page"
           />
         </div>
         <div class="col">
@@ -65,7 +74,9 @@
             <p class="mb-5 text-muted">
               My first landing page built with HTML/CSS and JS.
             </p>
-            <a href="" class="btn btn-branding-outline"> Launch project </a>
+            <a href="/work.html" class="btn btn-branding-outline">
+              Learn more
+            </a>
           </div>
         </div>
       </div>
@@ -77,14 +88,16 @@
               Weather project with Vanilla JS. Built with HTML, CSS, JS. API and
               real life forecast data implemented. Hosted on Netlify.
             </p>
-            <a href="" class="btn btn-branding-outline"> Launch project </a>
+            <a href="/work.html" class="btn btn-branding-outline">
+              Learn more
+            </a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
           <img
             src="images/optymisticweather-app.png"
             class="img-fluid img-thumbnail"
-            alt=""
+            alt="Weather application"
           />
         </div>
       </div>
@@ -96,7 +109,13 @@
           <p class="text-muted">Let's work together</p>
         </div>
         <div>
-          <a href="" class="btn btn-branding mt-2"> Contact me here</a>
+          <a
+            href="/contact.html"
+            class="btn btn-branding mt-2"
+            title="Contact Kasia"
+          >
+            Contact me</a
+          >
         </div>
       </div>
       <div class="d-flex justify-content-center">
@@ -104,23 +123,39 @@
           <a
             href="mailto:katarzyna.przybylakk@gmail.com"
             class="email-link d-flex mb-5"
+            title="Email Kasia"
             >katarzyna.przybylakk@gmail.com</a
           >
           <div class="social-links d-flex justify-content-center">
-            <a href="https://www.instagram.com/kitty.hsn/" target="_blank"
+            <a
+              href="https://www.instagram.com/kitty.hsn/"
+              target="_blank"
+              title="Instagram profile"
               ><i class="fab fa-instagram"></i
             ></a>
-            <a href="https://github.com/kittyhsn" target="_blank"
+            <a
+              href="https://github.com/kittyhsn"
+              target="_blank"
+              title="Github profile"
               ><i class="fab fa-github"></i
             ></a>
             <a
               href="https://www.linkedin.com/in/katarzyna-hassan-23179b1aa/"
               target="_blank"
+              title="Linkedin profile"
               ><i class="fab fa-linkedin"></i
             ></a>
           </div>
         </footer>
       </div>
     </div>
+    <p class="text-center">
+      This page was coded by Katarzyna Hassan and it is open-sourced on
+      <a href="https://github.com/kittyhsn" target="_blank">Github</a>, hosted
+      on
+      <a href="https://app.netlify.com/teams/kittyhsn/overview" target="_blank"
+        >Netlify</a
+      >.
+    </p>
   </body>
 </html>
