Finishing touches part 2

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
       </div>
     </div>
 
-    <p class="text-center m-5">My projects featuring SheCodes</p>
+    <p class="title-paragraph text-center m-5">
+      My projects featuring SheCodes
+    </p>
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
@@ -128,12 +130,6 @@
           >
           <div class="social-links d-flex justify-content-center">
             <a
-              href="https://www.instagram.com/kitty.hsn/"
-              target="_blank"
-              title="Instagram profile"
-              ><i class="fab fa-instagram"></i
-            ></a>
-            <a
               href="https://github.com/kittyhsn"
               target="_blank"
               title="Github profile"
@@ -149,11 +145,15 @@
         </footer>
       </div>
     </div>
-    <p class="text-center">
+    <p class="about-code text-center">
       This page was coded by Katarzyna Hassan and it is open-sourced on
-      <a href="https://github.com/kittyhsn" target="_blank">Github</a>, hosted
-      on
-      <a href="https://app.netlify.com/teams/kittyhsn/overview" target="_blank"
+      <a href="https://github.com/kittyhsn" target="_blank" class="ending-link"
+        >Github</a
+      >, hosted on
+      <a
+        href="https://app.netlify.com/teams/kittyhsn/overview"
+        target="_blank"
+        class="ending-link"
         >Netlify</a
       >.
     </p>
