--- a/work.html
+++ b/work.html
@@ -61,7 +61,7 @@
           </div>
           <div class="col-md-6">
             <img
-              src="images/weather-app.png"
+              src="images/optymisticweather-app.png"
               class="img-fluid mb-3 rounded"
               alt=""
             />
@@ -74,5 +74,59 @@
         </div>
       </div>
     </div>
+    <div
+      class="work-inquiry d-flex justify-content-between mb-5 d-none d-md-flex"
+    >
+      <div>
+        <h3>Work Inquiry</h3>
+        <p class="text-muted">Let's work together</p>
+      </div>
+      <div>
+        <a
+          href="/contact.html"
+          class="btn btn-branding mt-2"
+          title="Contact Kasia"
+        >
+          Contact me</a
+        >
+      </div>
+    </div>
+    <div class="d-flex justify-content-center">
+      <footer>
+        <a
+          href="mailto:katarzyna.przybylakk@gmail.com"
+          class="email-link d-flex mb-5"
+          title="Email Kasia"
+          >katarzyna.przybylakk@gmail.com</a
+        >
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://github.com/kittyhsn"
+            target="_blank"
+            title="Github profile"
+            ><i class="fab fa-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/katarzyna-hassan-23179b1aa/"
+            target="_blank"
+            title="Linkedin profile"
+            ><i class="fab fa-linkedin"></i
+          ></a>
+        </div>
+      </footer>
+    </div>
+
+    <p class="about-code text-center">
+      This page was coded by Katarzyna Hassan and it is open-sourced on
+      <a href="https://github.com/kittyhsn" target="_blank" class="ending-link"
+        >Github</a
+      >, hosted on
+      <a
+        href="https://app.netlify.com/teams/kittyhsn/overview"
+        target="_blank"
+        class="ending-link"
+        >Netlify</a
+      >.
+    </p>
   </body>
 </html>
