Made the project SEO friendly

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
       <h1>Katarzyna Hassan</h1>
       <h2 class="mb-5">Front-end developer based in Poland</h2>
       <div>
-        <a href="/contact.html" class="btn btn-branding">Contact me</a>
+        <a href="/contact.html" class="btn btn-branding" title="Contact Kasia"
+          >Contact me</a
+        >
       </div>
     </div>
 
@@ -68,6 +70,7 @@
             src="images/sheera-page.png"
             class="img-fluid img-thumbnail"
             alt="Simple HTML based page"
+            title="Simple HTML based page"
           />
         </div>
         <div class="col">
@@ -76,7 +79,11 @@
             <p class="mb-5 text-muted">
               My first landing page built with HTML/CSS and JS.
             </p>
-            <a href="/work.html" class="btn btn-branding-outline">
+            <a
+              href="/work.html"
+              class="btn btn-branding-outline"
+              title="Learn morek"
+            >
               Learn more
             </a>
           </div>
@@ -90,7 +97,11 @@
               Weather project with Vanilla JS. Built with HTML, CSS, JS. API and
               real life forecast data implemented. Hosted on Netlify.
             </p>
-            <a href="/work.html" class="btn btn-branding-outline">
+            <a
+              href="/work.html"
+              class="btn btn-branding-outline"
+              title="Learn more"
+            >
               Learn more
             </a>
           </div>
@@ -100,6 +111,7 @@
             src="images/optymisticweather-app.png"
             class="img-fluid img-thumbnail"
             alt="Weather application"
+            title="Weather application"
           />
         </div>
       </div>
@@ -146,16 +158,14 @@
       </div>
     </div>
     <p class="about-code text-center">
-      This page was coded by Katarzyna Hassan and it is open-sourced on
-      <a href="https://github.com/kittyhsn" target="_blank" class="ending-link"
-        >Github</a
-      >, hosted on
+      🦋 This project was coded by Katarzyna Hassan and it is
       <a
-        href="https://app.netlify.com/teams/kittyhsn/overview"
+        href="https://github.com/kittyhsn"
         target="_blank"
         class="ending-link"
-        >Netlify</a
-      >.
+        title="Github link"
+        >open-sourced</a
+      >
     </p>
   </body>
 </html>
