--- a/about.html
+++ b/about.html
@@ -52,36 +52,42 @@
             <h1 class="mb-4">Hi, I am Katarzyna Hassan</h1>
             <h2 class="mb-4">Frontend Developer, based in Poland.</h2>
             <p class="mb-5">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
+              My name is Kasia Hassan and I'm a Frontend Engineer. Not sure yet
+              what info put here.
             </p>
-            <a href="" class="btn btn-branding">See my projects</a>
+            <a href="" class="btn btn-branding" title="Check the projects"
+              >See my projects</a
+            >
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/me.jpg" alt="" class="img-fluid" />
+          <img
+            src="images/me.jpg"
+            alt=""
+            class="img-fluid rounded"
+            title="Kasia Hassan"
+          />
+        </div>
+      </div>
+      <div
+        class="work-inquiry d-flex justify-content-between mt-5 mb-5 d-none d-md-flex"
+      >
+        <div>
+          <h3>Work Inquiry</h3>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a
+            href="/contact.html"
+            class="btn btn-branding mt-2"
+            title="Contact Kasia"
+          >
+            Contact me</a
+          >
         </div>
       </div>
     </div>
-    <div
-      class="work-inquiry d-flex justify-content-between mb-5 d-none d-md-flex"
-    >
-      <div>
-        <h3>Work Inquiry</h3>
-        <p class="text-muted">Let's work together</p>
-      </div>
-      <div>
-        <a
-          href="/contact.html"
-          class="btn btn-branding mt-2"
-          title="Contact Kasia"
-        >
-          Contact me</a
-        >
-      </div>
-    </div>
+
     <div class="d-flex justify-content-center">
       <footer>
         <a
@@ -107,16 +113,14 @@
       </footer>
     </div>
     <p class="about-code text-center">
-      This page was coded by Katarzyna Hassan and it is open-sourced on
-      <a href="https://github.com/kittyhsn" target="_blank" class="ending-link"
-        >Github</a
-      >, hosted on
+      🦋 This project was coded by Katarzyna Hassan and it is
       <a
-        href="https://app.netlify.com/teams/kittyhsn/overview"
+        href="https://github.com/kittyhsn"
         target="_blank"
         class="ending-link"
-        >Netlify</a
-      >.
+        title="Github link"
+        >open-sourced</a
+      >
     </p>
   </body>
 </html>
