--- a/contact.html
+++ b/contact.html
@@ -49,24 +49,25 @@
       <div class="content">
         <h1 class="in-touch mt-5">Let's get in touch!</h1>
       </div>
-    </div>
-    <div
-      class="work-inquiry d-flex justify-content-between mb-5 d-none d-md-flex"
-    >
-      <div>
-        <h3>Work Inquiry</h3>
-        <p class="text-muted">Let's work together</p>
+      <div
+        class="work-inquiry d-flex justify-content-between mt-5 mb-5 d-none d-md-flex"
+      >
+        <div>
+          <h3>Work Inquiry</h3>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a
+            href="/contact.html"
+            class="btn btn-branding mt-2"
+            title="Contact Kasia"
+          >
+            Contact me</a
+          >
+        </div>
       </div>
-      <div>
-        <a
-          href="/contact.html"
-          class="btn btn-branding mt-2"
-          title="Contact Kasia"
-        >
-          Contact me</a
-        >
-      </div>
     </div>
+
     <div class="d-flex justify-content-center">
       <footer>
         <a
@@ -93,16 +94,14 @@
     </div>
 
     <p class="about-code text-center">
-      This page was coded by Katarzyna Hassan and it is open-sourced on
-      <a href="https://github.com/kittyhsn" target="_blank" class="ending-link"
-        >Github</a
-      >, hosted on
+      🦋 This project was coded by Katarzyna Hassan and it is
       <a
-        href="https://app.netlify.com/teams/kittyhsn/overview"
+        href="https://github.com/kittyhsn"
         target="_blank"
         class="ending-link"
-        >Netlify</a
-      >.
+        title="Github link"
+        >open-sourced</a
+      >
     </p>
   </body>
 </html>
