--- a/work.html
+++ b/work.html
@@ -53,8 +53,9 @@
             <img
               src="images/sheera-page.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Simple Page Project"
               id="sheera-img"
+              title="Simple Page Project"
             />
             <h3 class="text-center m-0">Simple Page Design</h3>
             <p class="text-center m-0 text-muted">Built with HTML and CSS</p>
@@ -63,7 +64,8 @@
             <img
               src="images/optymisticweather-app.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Weather Application"
+              title="Weather Application"
             />
             <h3 class="text-center m-0">Weather App</h3>
             <p class="text-center m-0 text-muted">
@@ -73,24 +75,25 @@
           </div>
         </div>
       </div>
-    </div>
-    <div
-      class="work-inquiry d-flex justify-content-between mb-5 d-none d-md-flex"
-    >
-      <div>
-        <h3>Work Inquiry</h3>
-        <p class="text-muted">Let's work together</p>
+      <div
+        class="work-inquiry d-flex justify-content-between mt-5 mb-5 d-none d-md-flex"
+      >
+        <div>
+          <h3>Work Inquiry</h3>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a
+            href="/contact.html"
+            class="btn btn-branding mt-2"
+            title="Contact Kasia"
+          >
+            Contact me</a
+          >
+        </div>
       </div>
-      <div>
-        <a
-          href="/contact.html"
-          class="btn btn-branding mt-2"
-          title="Contact Kasia"
-        >
-          Contact me</a
-        >
-      </div>
     </div>
+
     <div class="d-flex justify-content-center">
       <footer>
         <a
@@ -117,16 +120,14 @@
     </div>
 
     <p class="about-code text-center">
-      This page was coded by Katarzyna Hassan and it is open-sourced on
-      <a href="https://github.com/kittyhsn" target="_blank" class="ending-link"
-        >Github</a
-      >, hosted on
+      🦋 This project was coded by Katarzyna Hassan and it is
       <a
-        href="https://app.netlify.com/teams/kittyhsn/overview"
+        href="https://github.com/kittyhsn"
         target="_blank"
         class="ending-link"
-        >Netlify</a
-      >.
+        title="Github link"
+        >open-sourced</a
+      >
     </p>
   </body>
 </html>
